--- a/notebooks/eda-1.ipynb
+++ b/notebooks/eda-1.ipynb
@@ -277,11 +277,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -1514,12 +1509,13 @@
     "date['date_activ'] =pd.to_datetime(date[\"date_activ\"], format='%Y-%m-%d')\n",
     "date['date_end'] =pd.to_datetime(date[\"date_end\"], format='%Y-%m-%d')\n",
     "date['date_modif_prod'] =pd.to_datetime(date['date_modif_prod'], format='%Y-%m-%d')\n",
-    "date['date_renewal'] =pd.to_datetime(date['date_renewal'], format='%Y-%m-%d')\n"
+    "date['date_renewal'] =pd.to_datetime(date['date_renewal'], format='%Y-%m-%d')\n",
+    "price_df['price_date'] = pd.to_datetime(price_df['price_date'], format='%Y-%m-%d')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1552,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1572,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1592,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1612,7 +1608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1632,7 +1628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1641,7 +1637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1651,7 +1647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1670,11 +1666,140 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Hypothesis Investigation\n",
+    "\n",
+    "#### *  investigate whether price sensitivity has some influence on churn\n",
+    "    > Since we have the consumption data for each of the companies for the year of 2015, we will create new features to measure \"price sensitivity\" using the average of the year, the last 6 months and the last 3 months\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>channel_sales</th>\n",
+       "      <th>cons_12m</th>\n",
+       "      <th>cons_gas_12m</th>\n",
+       "      <th>cons_last_month</th>\n",
+       "      <th>date_activ</th>\n",
+       "      <th>date_end</th>\n",
+       "      <th>date_modif_prod</th>\n",
+       "      <th>date_renewal</th>\n",
+       "      <th>forecast_cons_12m</th>\n",
+       "      <th>...</th>\n",
+       "      <th>has_gas</th>\n",
+       "      <th>imp_cons</th>\n",
+       "      <th>margin_gross_pow_ele</th>\n",
+       "      <th>margin_net_pow_ele</th>\n",
+       "      <th>nb_prod_act</th>\n",
+       "      <th>net_margin</th>\n",
+       "      <th>num_years_antig</th>\n",
+       "      <th>origin_up</th>\n",
+       "      <th>pow_max</th>\n",
+       "      <th>churn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>0 rows × 26 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [id, channel_sales, cons_12m, cons_gas_12m, cons_last_month, date_activ, date_end, date_modif_prod, date_renewal, forecast_cons_12m, forecast_cons_year, forecast_discount_energy, forecast_meter_rent_12m, forecast_price_energy_off_peak, forecast_price_energy_peak, forecast_price_pow_off_peak, has_gas, imp_cons, margin_gross_pow_ele, margin_net_pow_ele, nb_prod_act, net_margin, num_years_antig, origin_up, pow_max, churn]\n",
+       "Index: []\n",
+       "\n",
+       "[0 rows x 26 columns]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "client_df[client_df.duplicated()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Transform date columns to datetime type\n",
+    "client_df[\"date_activ\"] = pd.to_datetime(client_df[\"date_activ\"], format='%Y-%m-%d')\n",
+    "client_df[\"date_end\"] = pd.to_datetime(client_df[\"date_end\"], format='%Y-%m-%d')\n",
+    "client_df[\"date_modif_prod\"] = pd.to_datetime(client_df[\"date_modif_prod\"], format='%Y-%m-%d')\n",
+    "client_df[\"date_renewal\"] = pd.to_datetime(client_df[\"date_renewal\"], format='%Y-%m-%d')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Transform date columns to datetime type\n",
+    "price_df[\"price_date\"] = pd.to_datetime(price_df[\"price_date\"], format='%Y-%m-%d')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not os.path.exists(os.path.join(\"/home/miki/Desktop/Docker/BCG/Customer-Churning-Analysis/data/\", \"final\")):\n",
+    "    os.makedirs(os.path.join(\"/home/miki/Desktop/Docker/BCG/Customer-Churning-Analysis/data/\", \"final\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PICKLE_TRAIN_DIR = os.path.join(\"/home/miki/Desktop/Docker/BCG/Customer-Churning-Analysis/data/final\", \"client.pkl\")\n",
+    "PICKLE_HISTORY_DIR = os.path.join(\"/home/miki/Desktop/Docker/BCG/Customer-Churning-Analysis/data/final\", \"price.pkl\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pd.to_pickle(client_df, PICKLE_TRAIN_DIR)\n",
+    "pd.to_pickle(price_df, PICKLE_HISTORY_DIR)"
+   ]
   }
  ],
  "metadata": {
