--- a/notebooks/modelling.ipynb
+++ b/notebooks/modelling.ipynb
@@ -15,6 +15,7 @@
     }
    ],
    "source": [
+    "import joblib\n",
     "import datetime\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -35,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_DIR = os.path.join(\"/home/miki/Desktop/Docker/BCG/Customer-Churning-Analysis/data/test\")\n",
+    "DATA_DIR = os.path.join(\"/home/miki/Desktop/Miki/customer-churning-analysis/data/test\")\n",
     "TRAINING_DATA = os.path.join(DATA_DIR, \"data.pkl\")\n",
     "HISTORY_DATA = os.path.join(DATA_DIR, \"price.pkl\")"
    ]
@@ -841,12 +842,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Save model as pickle file\n",
+    "joblib.dump(sgd_best, 'Task_4/final_model.pkl')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.1 ('churn': venv)",
+   "display_name": "Python 3.9.0 ('churn': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -860,12 +864,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "36714c044781162580cb1049bbc25edb9ed75b5ab50686df6fb5f1a9213cae50"
+    "hash": "207bd577ea3368f2ab94f14390519456674854cc43b2bcbe445ad45de62776f6"
    }
   }
  },
